--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".AhorcadoApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,39 +12,50 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ahorcado"
-        tools:targetApi="31"
         tools:overrideLibrary="com.google.android.material"
-        >
+        tools:targetApi="31">
+        <!--        <activity-->
+        <!--            android:name=".TableroActivity"-->
+        <!--            android:configChanges="keyboard|screenSize|orientation"-->
+        <!--            android:exported="false"-->
+        <!--            android:screenOrientation="portrait" />-->
+        <!--        <activity-->
+        <!--            android:name=".VictoriaActivity"-->
+        <!--            android:configChanges="keyboard|screenSize|orientation"-->
+        <!--            android:exported="false"-->
+        <!--            android:screenOrientation="portrait" />-->
+        <!--        <activity-->
+        <!--            android:name=".DerrotaActivity"-->
+        <!--            android:configChanges="keyboard|screenSize|orientation"-->
+        <!--            android:exported="false"-->
+        <!--            android:screenOrientation="portrait" />-->
+        <!--        <activity-->
+        <!--            android:name=".CreditosActivity"-->
+        <!--            android:configChanges="keyboard|screenSize|orientation"-->
+        <!--            android:exported="false"-->
+        <!--            android:screenOrientation="portrait" />-->
+        <!--        <activity-->
+        <!--            android:name=".CategoriaActivity"-->
+        <!--            android:configChanges="keyboard|screenSize|orientation"-->
+        <!--            android:exported="false"-->
+        <!--            android:screenOrientation="portrait" />-->
+        <!--        <activity-->
+        <!--            android:name=".InicialActivity"-->
+        <!--            android:configChanges="keyboard|screenSize|orientation"-->
+        <!--            android:exported="true"-->
+        <!--            android:screenOrientation="portrait">-->
+        <!--            <intent-filter>-->
+        <!--                <action android:name="android.intent.action.MAIN" />-->
+
+        <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+        <!--            </intent-filter>-->
+        <!--        </activity>-->
+
         <activity
-            android:screenOrientation="portrait"
+            android:name=".ui.activity.MainActivity"
             android:configChanges="keyboard|screenSize|orientation"
-            android:name=".TableroActivity"
-            android:exported="false" />
-        <activity
-            android:screenOrientation="portrait"
-            android:configChanges="keyboard|screenSize|orientation"
-            android:name=".VictoriaActivity"
-            android:exported="false" />
-        <activity
-            android:screenOrientation="portrait"
-            android:configChanges="keyboard|screenSize|orientation"
-            android:name=".DerrotaActivity"
-            android:exported="false" />
-        <activity
-            android:screenOrientation="portrait"
-            android:configChanges="keyboard|screenSize|orientation"
-            android:name=".CreditosActivity"
-            android:exported="false" />
-        <activity
-            android:screenOrientation="portrait"
-            android:configChanges="keyboard|screenSize|orientation"
-            android:name=".CategoriaActivity"
-            android:exported="false" />
-        <activity
-            android:screenOrientation="portrait"
-            android:configChanges="keyboard|screenSize|orientation"
-            android:name=".InicialActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
