--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,15 @@
         tools:targetApi="31"
         tools:overrideLibrary="com.google.android.material"
         >
+
+
+                <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
+                <meta-data
+                    android:name="com.google.android.gms.ads.APPLICATION_ID"
+                    android:value="ca-app-pub-9910445535228761~4203661473"/>
+
+
+
         <activity
             android:screenOrientation="portrait"
             android:configChanges="keyboard|screenSize|orientation"
